# ml-final-project

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/processed/CivilServiceCommission/: civilservicecommission-2.parquet  civilservicecommission-embedded-training-data-(finetuned-position).parquet  civilservicecommission-gridsearch-results-3.csv  civilservicecommission-gridsearch-results-random-forest-1.csv  civilservicecommission-gridsearch-results-random-forest-2.csv  civilservicecommission-gridsearch-results-random-forest-3.csv  civilservicecommission-gridsearch-results.csv  civilservicecommission.parquet
docs/: mkdocs.yml
docs/docs/: index.md
ml_final_project/: __init__.py  config.py  pdf_download.py  preprocess.py  scrape.py
ml_final_project/matplotlib/: color.py  iragca_cmr10.mplstyle  iragca_ml.mplstyle
ml_final_project/preprocessing/: PDFParser.py  __init__.py  pdfs.py
ml_final_project/scrapers/: BaseScraper.py  CSC.py  __init__.py
notebooks/: 1.0-iragca-csc.ipynb  2.0-everyone-csc-eda.ipynb  3.0-iragca-modeling.ipynb  3.1-iragca-preprocessing-suite.ipynb  3.2-iragca-trying-out-finetuning.ipynb
reports/figures/: ml_final_exam_methodology.excalidraw
reports/html/: 3.0-iragca-modeling.html
