[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml_final_project"
version = "0.0.1"
description = "Final Project for DS322 Machine Learning"
authors = [
  { name = "Chris Irag" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "lxml>=5.3.2",
    "pandas>=2.2.3",
    "playwright>=1.51.0",
    "polars>=1.27.0",
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ml_final_project"]
force_sort_within_sections = true

[tool.uv.sources]
ml-final-project = { workspace = true }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "duckdb>=1.2.2",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "mkdocs>=1.6.1",
    "ml-final-project",
    "pip>=25.0.1",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]
